[package]
name = "alloy-block-access-list"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp","serde"] }
alloy-rlp = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
