[package]
name = "alloy-contract"
description = "Interact with on-chain contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true

alloy-dyn-abi = { workspace = true, features = ["std"] }
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

futures-util.workspace = true
futures.workspace = true
thiserror.workspace = true

alloy-pubsub = { workspace = true, optional = true }

alloy-chains.workspace = true

[dev-dependencies]
alloy-rpc-client = { workspace = true, features = ["pubsub", "ws"] }
alloy-transport-http.workspace = true
alloy-node-bindings.workspace = true
test-utils.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
pubsub = ["alloy-provider/pubsub", "dep:alloy-pubsub"]
multicall = ["alloy-sol-types/json"]
