[package]
name = "alloy-eip-7547"
description = "EIP-7547: Inclusion Lists types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-engine-rpc-types = { workspace = true, features = ["derive"] }

# serde
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
serde = ["dep:serde", "alloy-primitives/serde"]
