[package]
name = "alloy-eip7547"
description = "EIP-7547: Inclusion Lists types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
alloy-serde = { workspace = true }

# serde
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
