[package]
name = "alloy-genesis"
description = "Ethereum genesis file definitions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives.workspace = true
alloy-serde.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }

# serde
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"alloy-serde/std",
	"serde/std",
	"alloy-trie/std",
	"alloy-eips/std"
]
