[package]
name = "alloy-json-rpc-router"
description = "Basic JSON-RPC 2.0 clients"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-json-rpc.workspace = true

serde_json = { version = "1.0.128" }
tower.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
