[package]
name = "alloy-network-primitives"
description = "Primitive types for Alloy network abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-serde.workspace = true
alloy-eips.workspace = true
alloy-consensus = { workspace = true, features = ["serde"] }

serde = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-serde/std",
	"serde/std"
]
serde = [
	"dep:serde",
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde"
]
