[package]
name = "alloy-network"
description = "Ethereum blockchain RPC behavior abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-eips = { workspace = true, features = ["serde"] }
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-signer.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[features]
k256 = ["alloy-primitives/k256"]
